# geos5fp

./: README.md  makefile  pyproject.toml
geos5fp/: HTTP_listing.py  __init__.py  constants.py  exceptions.py  geos5fp.py  geos5fp_connection.py  geos5fp_granule.py
geos5fp/timer/: timer.py
tests/: test_import_dependencies.py  test_import_geos5fp.py
