[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "geos5fp"
version = "1.0.0"
description = "generates rasters of near-real-time GEOS-5 FP near-surface meteorology"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "geopandas",
    "numpy",
    "pyproj",
    "rasterio",
    "scipy",
    "shapely",
    "pandas",
    "rasters",
    "requests",
    "beautifulsoup4",
    "python-dateutil",
    "matplotlib",
    "urllib3"
]

requires-python = ">=3.10"

[tool.setuptools.package-data]
geos5fp = ["*.txt"]
